# multibranch-app

./: CMakeLists.txt  README.md
inc/: app.h
jenkins/: Jenkinsfile
src/: .clang-tidy  app.cpp
test/: app_test.cpp
